<resources>
    <string name="app_name">TheLocator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hostel_image">Hostel Image</string>
    <string name="hostel_name">Hostel Name</string>
    <string name="hostel_price">Hostel Price</string>
    <string name="hostel_fav">Hostel fav</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phonenumber">Phone No</string>
    <string name="emailaddress">Email Address</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to login-->
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="signup">Don\'t have account? Sign Up</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--DateTimeFragment-->
    <string name="title_activity_date_time_fragment">DateTimeFragment</string>
    <string name="date_button">Pick date</string>
    <string name="date_picked">Date picked...</string>
    <string name="title_activity_sample">Sign in</string>


</resources>
