<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="strathmore.com.thelocator.LogInActivity"
    tools:showIn="@layout/app_bar_log_in"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Tulia Hostel"
        android:textStyle="bold"
        android:background="@color/Hostel_name"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:textSize="25dp"
        />

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/avatar3"
        android:contentDescription="@string/profile"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layout_padding_top"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_form">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />



    <AutoCompleteTextView
        android:id="@+id/emailaddress"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/layout_padding_left"
        android:layout_marginRight="@dimen/layout_padding_left"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@+id/emailaddress"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/layout_padding_left"
        android:layout_marginRight="@dimen/layout_padding_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:gravity="center"
        android:layout_marginTop="10dp"

        android:id="@+id/login"
        android:text="@string/login"
        android:textColor="@color/title_color"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_button_rounded"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />



    </LinearLayout>

    <TextView
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
