<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background">

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Tulia Hostel"
        android:textStyle="bold"
        android:background="@color/Hostel_name"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:textSize="25dp"
        />

<RelativeLayout

        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:gravity="center"

    >
    <TextView
        android:id="@+id/title"

        android:text="Fill in your Details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:layout_marginBottom="20dp"/>
    
    <EditText
        android:id="@+id/firstname"
        android:layout_marginLeft="@dimen/layout_padding_left"
        android:layout_below="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:id="@+id/lastname"
        android:layout_marginLeft="@dimen/layout_padding_left"
        android:layout_marginRight="@dimen/layout_padding_left"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/firstname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        />

    <EditText
        android:id="@+id/phonenumber"
        android:hint="@string/phonenumber"
        android:layout_below="@+id/firstname"
        android:layout_marginLeft="@dimen/layout_padding_left"

        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailaddress"
        android:hint="@string/emailaddress"
        android:layout_below="@+id/firstname"
        android:layout_toRightOf="@+id/phonenumber"
        android:layout_marginLeft="@dimen/layout_padding_left"
        android:layout_marginRight="@dimen/layout_padding_left"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/datepick"
        android:text="Pick date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phonenumber"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:onClick="datePicker"
        />
    <EditText
        android:id="@+id/datepicked"
        android:hint="Date picked..."
        android:textAlignment="center"
        android:layout_below="@+id/datepick"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/planvisit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Plan a Visit"
        android:layout_below="@+id/datepicked"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"/>



</RelativeLayout>
    </RelativeLayout>